--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,7 @@
 </head>
 <body>
   <app-root></app-root>
-  
-  <script src="https://github.com/aws/amazon-cognito-identity-js" crossorigin="anonymous"> </script>
+  <!--script src="./amazon-cognito-identity.min.js"></script-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aws-sdk/2.125.0/aws-sdk.min.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
